@@ -1,6 +1,6 @@
 scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, no Hall space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, data item '_cell_formula_units_Z' was not found -- the Z value will be estimated.
 scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, not enough data to estimate Z; crystal density undefined; molecular weight undefined -- assuming Z = 1.
-scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, summary formula could not be calculated -- neither '_atom_site_label' nor '_atom_site_type_symbol' data item present.
-scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, unit cell summary formula could not be calculated -- neither '_atom_site_label' nor '_atom_site_type_symbol' data item present.
+scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
+scripts/cif2cod: tests/cases/cif2cod_007.inp data_6000001: WARNING, unit cell summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
 "6000001";"4.6868";NULL;"10.8618";NULL;"5.5872";NULL;"90.000";NULL;"95.993";NULL;"90.000";NULL;"282.87";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"3";"P 1 21/c 1";NULL;NULL;NULL;"- Ho2 O7 Si2 -";NULL;NULL;"Christensen, A. N.; Hazell, R. G.; Hewat, A. W.";"Synthesis, crystal growth and structure investigations of rare-earth disilicates and rare-earth oxyapatites";"Acta Chemica Scandinavica";"1997";"51";"1";"37";"43";NULL;NULL;NULL;"";"Christensen, A. N.; Hazell, R. G.; Hewat, A. W.\nSynthesis, crystal growth and structure investigations of rare-earth disilicates and rare-earth oxyapatites\nActa Chemica Scandinavica\n51(1)\n(1997)\n37-43"
