@@ -15,7 +15,7 @@ scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data items
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_alpha' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_beta' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_gamma' not present -- taking default value 90 degrees.
-scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, summary formula could not be calculated -- neither '_atom_site_label' nor '_atom_site_type_symbol' data item present.
+scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_alpha' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_beta' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_gamma' not present -- taking default value 90 degrees.
@@ -23,7 +23,7 @@ scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data items
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_alpha' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_beta' not present -- taking default value 90 degrees.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, cell angle data item '_cell_angle_gamma' not present -- taking default value 90 degrees.
-scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, unit cell summary formula could not be calculated -- neither '_atom_site_label' nor '_atom_site_type_symbol' data item present.
+scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, unit cell summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
 file a siga b sigb c sigc alpha sigalpha beta sigbeta gamma siggamma vol sigvol celltemp sigcelltemp diffrtemp sigdiffrtemp cellpressure sigcellpressure diffrpressure sigdiffrpressure thermalhist pressurehist compoundsource nel sg sgHall commonname chemname mineral formula calcformula cellformula Z Zprime acce_code authors title journal year volume issue firstpage lastpage doi method radiation wavelength radType radSymbol Rall Robs Rref wRall wRobs wRref RFsqd RI gofall gofobs gofgt duplicateof optimal status flags text onhold
 file alternate
 a 10
