@@ -1,2 +1,2 @@
-scripts/cif_distances: tests/cases/cif_distances_025.inp data_9009261: ERROR, neither '_atom_site_label' nor '_atom_site_type_symbol' data item present -- dataset will be skipped.
+scripts/cif_distances: tests/cases/cif_distances_025.inp data_9009261: ERROR, neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found -- dataset will be skipped.
 FORMAT distance_matrix v1.0 svn://www.crystallography.net/cod-tools/trunk/perl-scripts/docs/cif_distances_distance_matrix_v1.0
