@@ -1,4 +1,4 @@
-scripts/cif_fillcell: tests/cases/cif_fillcell_004.inp data_1011060: WARNING, '_atom_site_label' data item was not found -- a serial number will be appended to the '_atom_site_type_symbol' data item values to make atom labels.
+scripts/cif_fillcell: tests/cases/cif_fillcell_004.inp data_1011060: WARNING, data item '_atom_site_label' was not found -- a serial number will be appended to the '_atom_site_type_symbol' data item values to make atom labels.
 data_1011060_cif_fillcell
 _space_group_IT_number           1
 _space_group_name_Hall           'P 1'
