@@ -1,2 +1,2 @@
-scripts/cif_molecule: tests/cases/cif_molecule_010.inp data_1011060: ERROR, neither '_atom_site_label' nor '_atom_site_type_symbol' data item present.
+scripts/cif_molecule: tests/cases/cif_molecule_010.inp data_1011060: ERROR, neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
 scripts/cif_molecule: tests/cases/cif_molecule_010.inp data_1011060: ERROR, 1 ERROR(s) encountered -- die on ERROR(s) requested.
