@@ -1,4 +1,4 @@
-scripts/cif_molecule: tests/cases/cif_molecule_012.inp data_1011060: WARNING, '_atom_site_label' data item was not found -- a serial number will be appended to the '_atom_site_type_symbol' data item values to make atom labels.
+scripts/cif_molecule: tests/cases/cif_molecule_012.inp data_1011060: WARNING, data item '_atom_site_label' was not found -- a serial number will be appended to the '_atom_site_type_symbol' data item values to make atom labels.
 data_1011060_molecule_0
 _[local]_cod_src_chemical_formula_structural C
 _[local]_cod_src_chemical_formula_sum
